--- a/src/pages/main/index.less
+++ b/src/pages/main/index.less
@@ -1,3 +1,68 @@
-.main-page {
-    background-color: white;
+* {
+    box-sizing: border-box;
+}
+
+.whoami-container {
+    padding: 16px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    box-sizing: border-box;
+
+    .star {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        display: block;
+        background-image: url('./stars-png-634.png');
+        background-size: cover;
+        animation-name: flash;
+        animation-duration: 0.8s;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count: infinite;
+    }
+
+    @keyframes flash {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+    }
+
+    .hRoNdo::-webkit-scrollbar-thumb {
+        border-radius: 9px;
+        background-color: #999;
+        outline: none;
+        opacity: 0.6;
+    }
+
+    .timeline-main-wrapper {
+        box-sizing: border-box;
+    }
+
+    .card-content-wrapper {
+        .timeline-card-content {
+            background-color: rgb(255 255 255 / 60%);
+
+            span {
+                display: none;
+            }
+
+            .show-less {
+                max-height: 500px;
+            }
+        }
+    }
+}
+
+body {
+    margin: 0;
 }
